# hstrat-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
benches/: benchmarks.rs
scripts/: extract_test_vectors.py
src/: differentia.rs  errors.rs  lib.rs  pyo3_bindings.rs  serialization.rs
src/column/: hereditary_stratigraphic_column.rs  mod.rs
src/policies/: curbed_recency_proportional.rs  depth_proportional.rs  depth_proportional_tapered.rs  dynamic.rs  fixed_resolution.rs  geometric_seq_nth_root.rs  geometric_seq_nth_root_tapered.rs  mod.rs  nominal_resolution.rs  perfect_resolution.rs  pseudostochastic.rs  recency_proportional.rs  stochastic.rs  trait.rs
src/reconstruction/: build_tree.rs  distance_tree.rs  estimation.rs  juxtaposition.rs  mod.rs  mrca.rs  postprocessors.rs  priors.rs  trie.rs
tests/: cross_validate.proptest-regressions  cross_validate.rs
tests/fixtures/column_vectors/: column_vectors.json
tests/fixtures/mrca_vectors/: mrca_vectors.json
tests/fixtures/policy_vectors/: curbed_recency_proportional_10.json  curbed_recency_proportional_67.json  depth_proportional_1.json  depth_proportional_10.json  depth_proportional_5.json  depth_proportional_tapered_1.json  depth_proportional_tapered_10.json  depth_proportional_tapered_5.json  fixed_resolution_1.json  fixed_resolution_10.json  fixed_resolution_5.json  fixed_resolution_50.json  geometric_seq_nth_root_2_2.json  geometric_seq_nth_root_2_4.json  geometric_seq_nth_root_3_2.json  geometric_seq_nth_root_tapered_2_2.json  geometric_seq_nth_root_tapered_3_2.json  (+5 more)
(+2 files in other folders)
