[package]
name = "hstrat"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Hereditary stratigraphy for phylogenetic inference (Rust port)"

[features]
default = ["std", "serde"]
std = []
serde = ["dep:serde", "dep:serde_json", "dep:serde_bytes"]
pyo3 = ["dep:pyo3", "std"]
rayon = ["dep:rayon"]

[dependencies]
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
libm = "0.2"
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
serde_bytes = { version = "0.11", optional = true }
pyo3 = { version = "0.23", optional = true, features = ["extension-module"] }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
serde_json = "1"
hex = "0.4"
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "benchmarks"
harness = false
